--- a/arapp.json
+++ b/arapp.json
@@ -31,6 +31,11 @@
       "name": "Contribute to hatch",
       "id": "CONTRIBUTE_ROLE",
       "params": []
+    },
+    {
+      "name": "Close the hatch",
+      "id": "CLOSE_ROLE",
+      "params": []
     }
   ],
   "path": "contracts/Hatch.sol"
