Change `contribute` function type signature, and add `balanceOf`

--- a/arapp.json
+++ b/arapp.json
@@ -30,7 +30,10 @@
     {
       "name": "Contribute to hatch",
       "id": "CONTRIBUTE_ROLE",
-      "params": []
+      "params": [
+        "Contributor",
+        "Amount"
+      ]
     },
     {
       "name": "Close the hatch",
