--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,8 @@
 {
   "name": "Hatch",
-  "description": "Bootstrap a fundraising campaign with a preliminary sale"
+  "author": "Aragon Black and Commons Swarm",
+  "description": "Bootstrap a fundraising campaign with a preliminary sale",
+  "details_url": "/meta/details.md",
+  "source_url": "https://github.com/commonsswarm/hatch-app",
+  "icons": [{ "src": "/meta/icon.svg", "sizes": "56x56" }]
 }
