--- a/package.json
+++ b/package.json
@@ -1,53 +1,62 @@
 {
-  "name": "@1hive/apps-marketplace-hatch",
-  "version": "1.0.0",
+  "name": "@commonsswarm/hatch",
+  "version": "2.0.0",
   "author": "Aragon Black <contact@aragon.black>",
   "contributors": [
     "Alejandro Santander <palebluedot@gmail.com>",
     "Olivier Sarrouy <olivier@aragon.black>"
   ],
   "license": "(GPL-3.0-or-later OR AGPL-3.0-or-later)",
-  "homepage": "https://github.com/1Hive/marketplace-app",
+  "homepage": "https://github.com/commonsswarm/hatch-app",
   "scripts": {
-    "lint": "solium --dir ./contracts --config ../../.soliumrc.json",
-    "compile": "buidler compile --force",
-    "devchain": "buidler node",
-    "test": "buidler test --network buidlerevm",
-    "test:gas": "REPORT_GAS=true buidler test --network localhost",
-    "coverage": "buidler coverage --network coverage",
-    "abi:extract": "buidler-extract --output abi/ --keys abi",
-    "publish:patch": "buidler publish patch",
-    "publish:minor": "buidler publish minor",
-    "publish:major": "buidler publish major",
-    "publish": "yarn publish:major"
+    "compile": "hardhat compile",
+    "chain": "hardhat node",
+    "fork": "hardhat node --fork https://xdai-archive.blockscout.com",
+    "lint": "solium --dir ./contracts --config .soliumrc.json",
+    "test": "hardhat test",
+    "test:gas": "REPORT_GAS=true yarn test",
+    "coverage": "hardhat coverage",
+    "publish:major": "hardhat publish major",
+    "publish:minor": "hardhat publish minor",
+    "publish:patch": "hardhat publish patch"
   },
   "files": [
-    "/abi",
-    "/arapp.json",
-    "/build",
+    "/artifacts/contracts/**/*.json",
+    "!/artifacts/contracts/**/*.dbg.json",
     "/contracts",
     "/test"
   ],
   "dependencies": {
     "@aragon/apps-token-manager": "^2.1.0",
-    "@aragon/os": "4.2.1"
+    "@aragon/os": "4.4.0"
   },
   "devDependencies": {
-    "@aragon/minime": "^1.0.0",
+    "@1hive/hardhat-aragon": "^0.1.0",
     "@aragon/apps-vault": "^4.1.0",
-    "@aragon/buidler-aragon": "^0.2.9",
-    "@aragon/contract-helpers-test": "^0.1.0",
-    "@nomiclabs/buidler": "^1.4.3",
-    "@nomiclabs/buidler-etherscan": "^1.3.3",
-    "@nomiclabs/buidler-ganache": "^1.3.3",
-    "@nomiclabs/buidler-solhint": "^1.3.3",
-    "@nomiclabs/buidler-truffle5": "^1.3.4",
-    "@nomiclabs/buidler-web3": "^1.3.4",
-    "buidler-extract": "^1.0.0",
-    "buidler-gas-reporter": "^0.1.3",
+    "@1hive/contract-helpers-test": "^0.1.0",
+    "@aragon/minime": "1.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "chai": "^4.2.0",
+    "dotenv": "^9.0.2",
+    "eslint": "^5.13.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "eth-ens-namehash": "^2.0.8",
-    "solidity-coverage": "^0.7.9",
-    "solium": "^1.2.3",
-    "web3": "^1.2.11"
+    "ethers": "^5.1.4",
+    "hardhat": "^2.6.5",
+    "hardhat-deploy": "^0.9.3",
+    "hardhat-gas-reporter": "^1.0.4",
+    "mocha-each": "^1.2.0",
+    "prettier": "^2.4.1",
+    "solidity-coverage": "^0.7.16",
+    "solium": "^1.2.5",
+    "web3": "^1.3.6"
   }
 }
