--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Hatch",
-  "author": "Aragon Black and Commons Swarm",
-  "description": "Bootstrap a fundraising campaign with a preliminary sale",
+  "author": "Commons Swarm",
+  "description": "Bootstrap a fundraising campaign that mints governance tokens",
   "details_url": "/meta/details.md",
   "source_url": "https://github.com/commonsswarm/hatch-app",
   "icons": [{ "src": "/meta/icon.svg", "sizes": "56x56" }]
